--- a/01/01.md
+++ b/01/01.md
@@ -1,1 +1,33 @@
+# 🗂️ Desafios de Manipulação de Arquivos
+
+Bem-vindo à pasta de desafios relacionados à manipulação de arquivos! Aqui, você encontrará dois exercícios distintos: um que utiliza APIs do Windows para criar e escrever em um arquivo e outro que realiza a mesma tarefa, mas sem o uso das APIs do Windows.
+
+## 🎯 Objetivos
+
+Sua missão é mergulhar no código de ambos os desafios para:
+
+- Identificar o nome do arquivo criado.
+- Localizar onde o arquivo é criado no sistema.
+- Descobrir quais funções são utilizadas para as manipulações de arquivo.
+- Determinar qual é o conteúdo escrito no arquivo.
+
+## 📁 Estrutura dos Desafios
+
+1. **Desafio com API do Windows**
+    - Utiliza funções específicas do Windows para interagir com o sistema de arquivos.
+2. **Desafio sem API do Windows**
+    - Emprega métodos alternativos para manipulação de arquivos, evitando as APIs do Windows.
+
+## 🛠️ Ferramentas e Funções Utilizadas
+
+- **Funções de API do Windows**: Para o desafio que utiliza as APIs, funções específicas serão discutidas, incluindo como elas interagem com o sistema de arquivos do Windows.
+- **Métodos Alternativos**: No desafio sem o uso das APIs do Windows, exploraremos as funções e bibliotecas que permitem a manipulação de arquivos.
+
+## 📊 Diagrama de Execução
+
+Para uma compreensão mais clara do fluxo de execução de cada desafio, desenhe diagrama, ilustrando as etapas principais desde a criação até a escrita dos arquivos.
+
+---
+
+Estamos ansiosos para ver suas análises e conclusões sobre esses desafios de manipulação de arquivos, compartilhe conosco no Linkedin e no Instagram! 🚀
 
